Feat: utility scripts & egraphs_dataset job & vllm server job

--- a/configs/vllm_server.conf
+++ b/configs/vllm_server.conf
@@ -14,5 +14,8 @@
 # HuggingFace cache directory
 # HF_CACHE_DIR="/scratch/kb5253/hf_cache"
 
+# Conda environment
+CONDA_ENV="/scratch/kb5253/conda_envs/vllm"
+
 # Logging configuration
 # LOG_LEVEL=1  # 0=DEBUG, 1=INFO, 2=WARN, 3=ERROR
