--- a/configs/vllm_server.conf
+++ b/configs/vllm_server.conf
@@ -4,7 +4,7 @@
 # Model configuration
 # MODEL_PATH="/scratch/kb5253/models/Qwen2.5-32B-Instruct"
 # DTYPE="auto"
-# MAX_MODEL_LEN=8192
+MAX_MODEL_LEN=32768
 # GPU_MEMORY_UTILIZATION=0.9
 
 # Server configuration
