--- a/configs/vllm_server.conf
+++ b/configs/vllm_server.conf
@@ -4,8 +4,13 @@
 # Model configuration
 # MODEL_PATH="/scratch/kb5253/models/Qwen2.5-32B-Instruct"
 # DTYPE="auto"
-MAX_MODEL_LEN=32768
+MAX_MODEL_LEN=131072
 # GPU_MEMORY_UTILIZATION=0.9
+TENSOR_PARALLEL_SIZE=2
+
+# RoPE scaling configuration (for extended context)
+ROPE_SCALING="yarn"
+ROPE_SCALING_FACTOR=4
 
 # Server configuration
 # HOST="0.0.0.0"
